2003-10-25  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-kill): Store the tnt-current-user, *then* check it
	for null after attempting to sign off.

2003-10-25  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-fullname-for-nick): Move out of tnt-buddy-list-filter.
	(tnt-is-buddy-away): Rename from tnt-buddy-away, update documentation.
	(tnt-get-away-msg): Allow prefix to be anything.
	(tnt-toggle-away): Use interactive "P" instead of "p".
	(tnt-sort-buddies-by): add new customization option.
	(tnt-group-away-buddies): add new customization option.
	(tnt-group-idle-buddies): add new customization option.
	(tnt-group-offline-buddies): add new customization option.
	(tnt-very-idle-minimum): add new customization option.
	(tnt-blist-to-buffer): Deleted.
	(tnt-buddy-list-filter): Deleted.
	(tnt-insert-blist): Replaces tnt-blist-to-buffer.  Lots of new
	hoopy functionality.
	(tnt-annotated-blist): Add.
	(tnt-nick-properties): Add.
	(tnt-reorder-annotated-blist): Add.
	(tnt-nick-less-than): Add.
	(tnt-strip-offline-nicks): Add.
	(tnt-buddy-list-font-lock-keywords): Add "v idle" keyword.
	(tnt-build-buddy-buffer): Use new tnt-insert-blist; comment; refactor.
	(tnt-is-buddy-away): Renamed from tnt-buddy-away.
	(tnt-buddy-edit-buffer): Use new tnt-insert-blist.

2003-10-21  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-pop-event): also recenter when switching to an IM
	buffer from here

2003-03-23  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-kill): call toc-close and tnt-shutdown before giving
	the "Already offline" error, just to be sure everything gets
	cleaned up.
	(tnt-join-chat): recenter when entering the chat buffer.

2003-02-27  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-im): recenter when entering the im buffer

2002-10-23  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-html-regexps-to-replace): added &quot;
	(tnt-buddy-list-menu): added a newline
